mobile,web layout issue fixed

--- a/src/static/index.css
+++ b/src/static/index.css
@@ -40,7 +40,6 @@
 
 body {
   margin: 0;
-  /* height: 100vh; */
   font-family: "Noto Sans CJK KR", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -48,9 +47,9 @@ body {
 }
 
 
-/* #root {
-  height: 100%;
-} */
+#root {
+  height:100%;
+}
 
 code {
   font-family: "Noto Sans CJK KR", sans-serif;
